fix hobbies bullets alignment

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ span {
     font-weight: 500;
     font-size: 26.5px;
     margin: 3px 5px 0px auto;
-    line-height: 1.18;
+    line-height: 1.33;
 }
 
 .hobbies-contents {
